Updating build.gradle