@@ -7,6 +7,7 @@ plugins {
 group = 'game'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+targetCompatibility = '11'
 
 configurations {
 	compileOnly {
@@ -27,10 +28,50 @@ dependencies {
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
 	implementation 'javax.servlet:jstl'
 	implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
+	implementation group: 'dom4j', name: 'dom4j', version: '1.6.1'
+	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	implementation group: 'org.apache.commons', name: 'commons-pool2', version: '2.11.1'
+	implementation group: 'org.apache.commons', name: 'commons-jexl3', version: '3.2'
+	implementation group: 'commons-net', name: 'commons-net', version: '3.6'
+	implementation group: 'commons-codec', name: 'commons-codec', version: '1.9'
+	implementation 'com.github.dozermapper:dozer-core:6.2.0'
+	implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
+	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+	implementation group: 'log4j', name: 'log4j', version: '1.2.16'
+	implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+	implementation group: 'com.google.zxing', name: 'core', version: '3.3.1'
+	implementation group: 'com.google.zxing', name: 'javase', version: '3.4.0'
+	implementation group: 'eu.bitwalker', name: 'UserAgentUtils', version: '1.17'
+	implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.14'
+	implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
+	implementation group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.2'
+	implementation group: 'org.webjars', name: 'jquery', version: '3.5.1'
+
+	compileOnly "org.springframework.boot:spring-boot-starter-security"
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+compileJava {
+	options.encoding = "UTF-8"
+	options.incremental = true
+
+	options.compilerArgs.addAll([
+			"--add-exports",
+			"javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+	])
+	options.compilerArgs.addAll([
+			"--add-exports",
+			"javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
+	])
+	options.compilerArgs.addAll([
+			"--add-exports",
+			"javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED"
+	])
 }
 
 tasks.named('test') {
